# naf-ai-agents-workshop

./: .env.template  .flake8  .gitattributes  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  WORKSHOP_FAQ.md  WORKSHOP_PLAN.md  pyproject.toml  ruff.toml
.devcontainer/: README.md  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: NOTEBOOK_CREATION_GUIDE.md  STUDENT_SETUP_GUIDE.md  TROUBLESHOOTING.md  WORKSHOP_OUTLINE.md  llms.txt
docs/examples/: address_groups.py  address_objects.py  nat_policy.py  security_policy.py  service_groups.py  services.py  tags.py
notebooks/: 101_type_annotations.ipynb  102_core_concepts.ipynb  103_your_first_graph.ipynb  104_state_management.ipynb  105_sequential_workflows.ipynb  106_conditional_routing.ipynb  107_looping_workflows.ipynb  108_first_llm_integration.ipynb  109_conversational_memory.ipynb  110_react_agents_with_tools.ipynb  111_human_in_the_loop.ipynb
scripts/: clean_notebook.py  setup_git_filters.sh
src/: README.md  __init__.py  main.py
src/cli/: __init__.py  __main__.py  app.py
src/cli/commands/: __init__.py  run.py  studio.py  tools.py
src/core/: __init__.py  client.py  config.py  state.py
